# tinyconfig

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  release_body.md
api/: index.html
changelog/: index.html
docs/: api.md
search/: search_index.json
src/tinyconfig/: base.py
tools/: release.py
